# peripherals_rs

./: Cargo.toml
src/: keyboard.rs  main.rs  peripherals.rs
src/platform/: keyboard.h  keyboard_macos.c
